--- a/webdesign.html
+++ b/webdesign.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Services</title>
 </head>
 <body>
     <div id="promo">
-        <div>Schedule a Consultation today: <img id="cell" src="" alt=""><strong>   281-902-6607</strong></div>
+        <div>Schedule a Consultation today: <img id="cell" src="images/phone.svg" alt=""><strong>   281-902-6607</strong></div>
     </div>
     <header>
-        <img src="" id="contact-logo">
+        <img src="images/Famon_WEB.svg" id="contact-logo">
         <nav class="header-nav">
             <a href="index.html">HOME</a>
             <a>ABOUT-US</a>
