emove unused files

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                     <a href="Tutoring Services">Tutoring Services</a>
                     <a href="Shopify and Wordpress">Shopify and Wordpress</a>
                 </div>
-                <img src="images/dropdown-icon.svg" id="contact-dropdown-icon">
+                <img src="images/dropdown_icon.svg" id="contact-dropdown-icon">
             </div>
         </nav>
     </header>
