--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="webdesign.html">WEB DESIGN</a>
                         <a href="tutoring.html">TUTORING SERVICES</a>
                     </div>
-                    <img src="images/dropdown-icon.svg" id="dropdown-icon">
+                    <img src="images/dropdown_icon.svg" id="dropdown-icon">
                 </div>
             </nav>
         </header>
