--- a/tutoring.html
+++ b/tutoring.html
@@ -22,7 +22,7 @@
                     <a href="webdesign.html">WEB DESIGN</a>
                     <a href="tutoring.html">TUTORING SERVICES</a>
                 </div>
-                <img src="images/dropdown-icon.svg" id="contact-dropdown-icon">
+                <img src="images/dropdown_icon.svg" id="contact-dropdown-icon">
             </div>
         </nav>
     </header>
